include(${CMAKE_CURRENT_SOURCE_DIR}/external_option.cmake)

set(_artifact_path "${PROJECT_BINARY_DIR}/unittest")
set(_artifact_bin_path "${_artifact_path}/bin")

set(_link_dir_list "")
set(_link_libs_list "")

set(_src_dir "${PROJECT_SOURCE_DIR}/unittests/src")
file(GLOB _src_list "${_src_dir}/*.cpp" "${_src_dir}/*.c")

list(APPEND _link_dir_list ${SIRIUS_TEST_EXTRA_LINK_DIRECTORIES})
list(APPEND _link_libs_list
     ${SIRIUS_TARGET_CMAKE_NAMESPACE}::${SIRIUS_TARGET_LIBRARY_NAME_LIBSIRIUS})
list(APPEND _link_libs_list ${SIRIUS_TEST_EXTRA_LINK_LIBRARIES})

foreach(file ${_src_list})
  get_filename_component(file_name ${file} NAME_WE)
  get_filename_component(full_name ${file} NAME)
  string(REGEX REPLACE "\\.[^.]+$" "" file_name ${full_name})
  set(_target_name "${SIRIUS_TARGET_LIBRARY_NAME_LIBSIRIUS}_${file_name}")

  add_executable(${_target_name} ${file})
  foreach(_suffix "" "_DEBUG" "_RELEASE" "_RELWITHDEBINFO" "_MINSIZEREL")
    set_target_properties(
      ${_target_name} PROPERTIES RUNTIME_OUTPUT_DIRECTORY${_suffix}
                                 ${_artifact_bin_path})
  endforeach()
  unset(_suffix)

  target_link_directories(${_target_name} PRIVATE ${_link_dir_list})
  target_link_libraries(${_target_name} PRIVATE ${_link_libs_list})

  if(NOT CMAKE_SYSTEM_NAME STREQUAL "Windows")
    if(SIRIUS_TEST_PIE_ENABLE)
      target_compile_options(${_target_name} PRIVATE "-fPIC")
      target_compile_options(${_target_name} PRIVATE "-fPIE")
      target_link_options(${_target_name} PRIVATE "-pie")
    else()
      target_compile_options(${_target_name} PRIVATE "-fno-PIC")
      target_compile_options(${_target_name} PRIVATE "-fno-PIE")
      target_link_options(${_target_name} PRIVATE "-no-pie")
    endif()
  endif()

  if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    target_compile_options(${_target_name} PRIVATE "/W4")
  else()
    target_compile_options(${_target_name} PRIVATE "-Wall")
  endif()

  target_compile_definitions(
    ${_target_name}
    PRIVATE -Dsirius_log_module_name="${SIRIUS_TEST_MODULE_PRINT_NAME}"
    PRIVATE -Dsirius_log_level=${SIRIUS_TEST_EXTERNAL_LOG_LEVEL})

  add_test(
    NAME ${_target_name}
    COMMAND ${_artifact_bin_path}/${_target_name}
    WORKING_DIRECTORY ${_artifact_bin_path})

  if(CMAKE_SYSTEM_NAME STREQUAL "Windows" AND BUILD_SHARED_LIBS)
    set_tests_properties(
      ${_target_name} PROPERTIES ENVIRONMENT_MODIFICATION
                                 "PATH=path_list_prepend:${TARGET_LIB_DIR}")
  endif()
endforeach()

add_custom_target(
  custom_clean
  COMMAND ${CMAKE_COMMAND} -E remove ${_artifact_bin_path}/test*_*.*
  COMMENT "Delete the files generated by the test")
